--- a/mifosng-android/src/main/res/layout/activity_home.xml
+++ b/mifosng-android/src/main/res/layout/activity_home.xml
@@ -44,7 +44,7 @@
             app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
 
-        <fragment
+        <androidx.fragment.app.FragmentContainerView
             android:id="@+id/nav_host_fragment"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="0dp"
@@ -52,6 +52,7 @@
             android:layout_above="@id/nav_view"
             android:layout_below="@+id/toolbar"
             app:defaultNavHost="true"
+            app:navGraph="@navigation/nav_graph"
             app:layout_constraintBottom_toTopOf="@+id/nav_view"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
