--- a/mifosng-android/src/main/res/values/styles.xml
+++ b/mifosng-android/src/main/res/values/styles.xml
@@ -10,11 +10,12 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="MaterialAppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="colorAccent">@color/accent</item>
+    <style name="MaterialAppTheme" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorPrimary">@color/primary</item>
         <item name="colorButtonNormal">@color/primary</item>
+        <item name="colorPrimaryContainer">@color/primary</item>
+        <item name="colorOnPrimaryContainer">@color/white</item>
         <item name="android:buttonStyle">@style/AppTheme.Button</item>
         <item name="buttonStyle">@style/AppTheme.Button</item>
         <item name="android:textViewStyle">@style/AppTheme.Text</item>
@@ -69,7 +70,7 @@
         <item name="android:paddingBottom">5dp</item>
         <item name="android:popupBackground">#FFFFFF</item>
     </style>
-    
+
     <style name="repayment_date" parent="spinner_style">
         <item name="android:background">@drawable/gradient_repayment</item>
     </style>
