--- a/mifosng-android/src/main/res/values/styles_toolbar.xml
+++ b/mifosng-android/src/main/res/values/styles_toolbar.xml
@@ -10,11 +10,11 @@
 
     <style name="Toolbar.Common">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:textColorPrimary">@android:color/white</item>
-        <item name="android:textColorSecondary">@android:color/white</item>
+        <item name="android:textColorPrimary">@android:color/black</item>
+        <item name="android:textColorSecondary">@android:color/black</item>
         <item name="android:layout_height">?attr/actionBarSize</item>
-        <item name="android:background">@color/primary</item>
-        <item name="actionModeBackground">@color/primary</item>
+        <item name="android:background">@color/white</item>
+        <item name="actionModeBackground">@color/powder_blue</item>
         <item name="actionBarPopupTheme">@style/ThemeOverlay.AppCompat.Light</item>
         <item name="popupTheme">@style/AppToolbarPopup</item>
     </style>
