--- a/mifosng-android/src/main/res/drawable/circular_bg_gray.xml
+++ b/mifosng-android/src/main/res/drawable/circular_bg_gray.xml
@@ -4,7 +4,7 @@
     android:shape="oval">
 
     <solid
-        android:color="@color/divider"/>
+        android:color="@color/baby_blue"/>
 
     <size
         android:width="120dp"
