--- a/mifosng-android/src/main/res/layout/fragment_new_collection_sheet.xml
+++ b/mifosng-android/src/main/res/layout/fragment_new_collection_sheet.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         style="@style/LinearLayout.Base"
@@ -10,50 +11,70 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_margin="8dp"
             android:text="@string/generate_new"
             android:textSize="24sp" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="10dp"
+            android:layout_margin = "8dp"
             android:text="@string/fill_collection_sheet_message"
             android:textColor="@color/gray_dark"
             android:textSize="12sp" />
 
-        <com.mifos.mifosxdroid.views.CustomSpinner
-            android:id="@+id/sp_office_list"
-            style="@style/spinner_style"
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:layout_marginBottom="40dp"
-            android:entries="@array/search_options"
-            android:paddingTop="10dp"
-            android:spinnerMode="dropdown" />
+            android:hint="@string/office"
+            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+            android:layout_margin="8dp">
 
-        <TextView
-            android:id="@+id/tv_repayment_date"
-            style="@style/repayment_date"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:layout_marginBottom="40dp"
-            android:text="@string/repayment_date" />
+            <com.google.android.material.textfield.MaterialAutoCompleteTextView
+                android:id="@+id/officeListField"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
-        <com.mifos.mifosxdroid.views.CustomSpinner
-            android:id="@+id/sp_staff_list"
-            style="@style/spinner_style"
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/repaymentDateFieldContainer"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:hint="@string/repayment_date"
+            app:endIconMode="custom"
+            app:endIconDrawable="@drawable/baseline_calendar_today_black_24"
+            android:layout_margin ="8dp">
+            <com.google.android.material.textfield.TextInputEditText
+                android:focusable="false"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:maxLines="1" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <!--        <TextView-->
+        <!--            android:id="@+id/tv_repayment_date"-->
+        <!--            style="@style/repayment_date"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginTop="40dp"-->
+        <!--            android:layout_marginBottom="40dp"-->
+        <!--            android:text="@string/repayment_date" />-->
+
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:layout_marginBottom="40dp"
-            android:entries="@array/search_options"
-            android:paddingTop="10dp"
-            android:spinnerMode="dropdown" />
+            android:hint="@string/staff"
+            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+            android:layout_margin="8dp">
+
+            <com.google.android.material.textfield.MaterialAutoCompleteTextView
+                android:id="@+id/staffSelectionField"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
 
         <RelativeLayout
@@ -66,9 +87,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
                 android:layout_marginRight="20dp"
+                style="@style/Widget.Material3.Button.TonalButton"
                 android:background="@drawable/login_button_rounded"
-                android:text="@string/generate"
-                android:textColor="@color/white" />
+                android:text="@string/generate" />
 
             <Button
                 android:id="@+id/btn_clear"
@@ -77,9 +98,8 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:background="@drawable/login_button_rounded"
-                android:backgroundTint="@color/light_grey"
-                android:text="@string/clear"
-                android:textColor="@color/white" />
+                style="@style/Widget.Material3.Button.TonalButton"
+                android:text="@string/clear" />
         </RelativeLayout>
     </LinearLayout>
 </ScrollView>
