--- a/mifosng-android/src/main/res/values/styles_text_input.xml
+++ b/mifosng-android/src/main/res/values/styles_text_input.xml
@@ -11,6 +11,7 @@
     <style name="TextInput.Base">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">8dp</item>
     </style>
 
     <style name="TextInput.Base.Weight">
