--- a/mifosng-android/src/main/res/layout/simple_spinner_item.xml
+++ b/mifosng-android/src/main/res/layout/simple_spinner_item.xml
@@ -3,5 +3,4 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textColor="@color/black"
-    android:textSize="25sp"
-    android:textStyle="bold" />
+    android:textSize="25sp"/>
